syntax = "proto3";

package server;

option java_package = "com.fluentbuild.apollo.work";
option java_outer_classname = "GetTestLogsRequestProto";

message GetTestLogsRequest {
    string workKey = 1;
    string deviceKey = 2;
    string testKey = 3;
    int32 offset = 4;
}
